--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<img src='./output/semantic/StockTicker.png'>
+<body>
+  <!-- <button class="btn-toggle">Toggle Dark Mode</button> -->
+  <Title>money printer go brrrrrrrrrrrr</Title>
+  <style type="text/css">
+    body {
+      color: whitesmoke;
+      background-color: #000000
+    }
+
+    a:link, a:visited {
+      color: pink;
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    a:hover, a:active {
+      color: yellow;
+      background-color: transparent;
+      text-decoration: underline;
+    }
+  </style>
+  <img src="jpow.gif" alt="jpow gif" />
+  <h1>💎👐🚀🌙</h2>
+    <p>We're using PRAW :)
+
+      Checkout the charts:
+    <ul>
+      <li><a href="drilldown.html">Drilldown style</a></li>
+      <li><a href="columnstack.html">Stacked Column style</a></li>
+      <li><a href="sample_drilldown.html">sample drilldown</a></li>
+    </ul>
+    </p>
+    <!-- <p>💎👐🚀🌙</p> -->
+    <img src="brrr.gif" alt="money printer go brr gif" />
+</body>
