--- a/columnstack.html
+++ b/columnstack.html
@@ -21,14 +21,14 @@
 
 
             Highcharts.setOptions({"global": {}, "lang": {}});
-            var option = {"chart": {"renderTo": "container", "width": 850, "height": 600}, "colors": {}, "credits": {"enabled": false}, "drilldown": {}, "exporting": {}, "labels": {}, "legend": {}, "loading": {}, "navigation": {}, "pane": {}, "plotOptions": {"column": {"stacking": "normal"}}, "series": {}, "subtitle": {}, "title": {"text": "Stock Ticker mentions on wallstreetbets"}, "tooltip": {"formatter": function () {                                return '<b>' + this.x + '</b><br/>' +                                    this.series.name + ': ' + this.y + '<br/>' +                                    'Total: ' + this.point.stackTotal;                            }}, "xAxis": {"categories": ["", "'A'", "'ALL'", "'AMC'", "'ARE'", "'AT'", "'B'", "'DD'", "'DO'", "'FOR'", "'GME'", "'IM'", "'IT'", "'K'", "'LINE'", "'M'", "'MORE'", "'MY'", "'NOK'", "'NOW'", "'OUT'", "'S'", "'SO'", "'T'", "'TD'", "'TIME'"]}, "yAxis": {"allowDecimals": false, "min": 0, "title": {"text": "Number of Mentions"}}};
+            var option = {"chart": {"renderTo": "container", "width": 850, "height": 600}, "colors": {}, "credits": {"enabled": false}, "drilldown": {}, "exporting": {}, "labels": {}, "legend": {}, "loading": {}, "navigation": {}, "pane": {}, "plotOptions": {"column": {"stacking": "normal"}}, "series": {}, "subtitle": {}, "title": {"text": "Stock Ticker mentions on wallstreetbets"}, "tooltip": {"formatter": function () {                                return '<b>' + this.x + '</b><br/>' +                                    this.series.name + ': ' + this.y + '<br/>' +                                    'Total: ' + this.point.stackTotal;                            }}, "xAxis": {"categories": ["'A'", "'AMC'", "'GME'", "'NOK'"]}, "yAxis": {"allowDecimals": false, "min": 0, "title": {"text": "Number of Mentions"}}};
 
 
  
 
             var chart = new Highcharts.Chart(option);
 
-            var data = [{"data": [1915, 82, 39, 222, 32, 16, 20, 40, 38, 29, 463, 7, 37, 17, 18, 21, 15, 19, 136, 28, 11, 32, 13, 28, 14, 8], "type": "column", "name": "submission text"}, {"data": [1180, 59, 39, 436, 47, 22, 4, 9, 40, 52, 652, 17, 52, 18, 24, 13, 9, 15, 391, 24, 15, 23, 9, 26, 12, 15], "type": "column", "name": "title of submission"}];
+            var data = [{"data": [90, 237, 513, 143], "type": "column", "name": "submission text"}, {"data": [66, 460, 714, 405], "type": "column", "name": "title of submission"}];
             var dataLen = data.length;
             for (var ix = 0; ix < dataLen; ix++) {
                 chart.addSeries(data[ix]);
