--- a/drilldown.html
+++ b/drilldown.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
         <script type="text/javascript" src="https://code.highcharts.com/modules/heatmap.js"></script>
         <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
-        <script type="text/javascript" src="http://code.highcharts.com/modules/drilldown.js"></script>
+        <script type="text/javascript" src="https://code.highcharts.com/modules/drilldown.js"></script>
     </head>
     <body style="margin:0;padding:0">
                 <div id="container" style="width:850px;height:600px;">Loading....</div>
