remove count filter. clean repo

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       text-decoration: underline;
     }
   </style>
-  <img src="jpow.gif" alt="jpow gif" />
+  <img src="img/jpow.gif" alt="jpow gif" />
   <h1>💎👐🚀🌙</h2>
     <p>We're using PRAW :)
-
+      <br>
       Checkout the charts:
     <ul>
-      <li><a href="drilldown.html">Drilldown style</a></li>
-      <li><a href="columnstack.html">Stacked Column style</a></li>
-      <li><a href="sample_drilldown.html">sample drilldown</a></li>
+      <li><a href="output/semantic/drilldown.html">Drilldown style</a></li>
+      <li><a href="output/semantic/columnstack.html">Stacked Column style</a></li>
+      <li><a href="output/semantic/sample_drilldown.html">sample drilldown</a></li>
     </ul>
     </p>
     <!-- <p>💎👐🚀🌙</p> -->
-    <img src="brrr.gif" alt="money printer go brr gif" />
+    <img src="img/brrr.gif" alt="money printer go brr gif" />
 </body>
