fixing white space

--- a/wsb/template.html
+++ b/wsb/template.html
@@ -17,14 +17,18 @@
     (order by <i>Options Vol</i> column).
   </p>
   <p>Many thanks and blessings to:
-  <ul>
-    <li><a href="https://www.reddit.com/r/wallstreetbets/" target="_blank">r/wallstreetbets</a> ❤️</li>
+  <ul><li><a href="https://www.reddit.com/r/wallstreetbets/" target="_blank">r/wallstreetbets</a> ❤️</li>
     <li><a href="https://praw.readthedocs.io/en/latest/index.html" target="_blank">PRAW</a></li>
     <li><a href="https://pandas.pydata.org/docs/reference/index.html#api" target="_blank">Pandas</a></li>
     <li><a href="https://altair-viz.github.io/index.html" target="_blank">Altair</a></li>
     <li><a href="https://github.com/vega/vega-embed" target="_blank">vega-embed</a></li>
   </ul>
-  <i>Note: Clicking on bars will filter the tables. Each row in the table is linked to the submission/comment. Just click on the row to open.</i>
+  </p>
+  <br>
+  <p><i>Notes:<br>
+      Clicking on bars will filter the tables.<br>
+      Click on table row to open the submission/comment.<br>
+      Count/Date filters in top right corner.</i>
   </p>
   <hr>
   <p>
@@ -55,6 +59,10 @@
       color: whitesmoke;
       background-color: #000000;
       font-family: "Courier New", monospace;
+    }
+
+    ul {
+      margin: -15px 0;
     }
 
     h3 {
