--- a/wsb/template.html
+++ b/wsb/template.html
@@ -9,7 +9,14 @@
 
 <body>
   <Title>money printer go brrrrrr</Title>
-  <img src="img/jpow.gif" alt="jpow gif" />
+  <div class="clearfix">
+    <div class="img-container">
+      <img src="img/jpow.gif" alt="jpow gif" style="width:100%">
+    </div>
+    <div class="img-container">
+      <img src="img/brrr.gif" alt="money printer go brr gif" style="width:100%" />
+    </div>
+  </div>
   <h1>💎👐🚀🌙 Last Updated: {{ last_updated }}</h1>
   <h3><i>obligatory this is not financial advice</i></h3>
   <p>Do your research. You can start with
@@ -42,11 +49,9 @@
   </p>
   <hr>
   <p>
-  <h1>Stock Tickers mentions in Daily Discussion comments</h1>
+  <h1>New Daily Discussion comments</h1>
   <div id="vis3"></div>
   </p>
-  <hr>
-  <img src="img/brrr.gif" alt="money printer go brr gif" />
   <script type="text/javascript">
     // , {"loader": {"target": "_blank"}} in opt argument of vegaEmbed
     // this allows links to open in new tab
@@ -63,6 +68,15 @@
 
     ul {
       margin: -15px 0;
+    }
+
+    .img-container {
+      flex: 50%;
+      padding: 5px;
+    }
+
+    .clearfix {
+      display: flex;
     }
 
     h3 {
