--- a/wsb/template.html
+++ b/wsb/template.html
@@ -14,7 +14,7 @@
       <img src="img/jpow.gif" alt="jpow gif" style="width:100%">
     </div>
     <div class="img-container">
-      <img src="img/brrr.gif" alt="money printer go brr gif" style="width:100%" />
+      <img src="img/brrr1.gif" alt="money printer go brr gif" style="width:100%" />
     </div>
   </div>
   <h1>💎👐🚀🌙 Last Updated: {{ last_updated }}</h1>
