--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="img/brrr1.gif" alt="money printer go brr gif" style="width:100%" />
     </div>
   </div>
-  <h1>💎👐🚀🌙 Last Updated: 2021-02-02 08:54 PM </h1>
+  <h1>💎👐🚀🌙 Last Updated: 2021-02-02 09:15 PM </h1>
   <h3><i>obligatory this is not financial advice</i></h3>
   <p>Do your research. You can start with
     <a href="https://www.barchart.com/options/most-active/stocks" target="_blank">this chart for stock activity</a>
@@ -54,13 +54,13 @@
   <div id="vis3"></div>
   </p>
   <script type="text/javascript">
-    $.getJSON({'https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/StockTicker.json'}, function(data) {
+    $.getJSON('https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/StockTicker.json', function(data) {
         vegaEmbed('#vis1', data).catch(console.error);
     });
-    $.getJSON({'https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/DueDiligence.json'}, function(data) {
+    $.getJSON('https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/DueDiligence.json', function(data) {
         vegaEmbed('#vis2', data).catch(console.error);
     });
-    $.getJSON({'https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/DailyDiscussion.json'}, function(data) {
+    $.getJSON('https://raw.githubusercontent.com/kennybui-data-ai/wallstreetbets/master/output/semantic/DailyDiscussion.json', function(data) {
         vegaEmbed('#vis3', data).catch(console.error);
     });
     // vegaEmbed('#vis1', ).catch(console.error);
