changing suggested chart

--- a/wsb/template.html
+++ b/wsb/template.html
@@ -21,8 +21,8 @@
   <h1>💎👐🚀🌙 Last Updated: {{ last_updated }}</h1>
   <h3><i>obligatory this is not financial advice</i></h3>
   <p>Do your research. You can start with
-    <a href="https://www.barchart.com/options/most-active/stocks" target="_blank">this chart for stock activity</a>
-    (order by <i>Options Vol</i> column).
+    <a href="https://www.barchart.com/options/most-active/stocks?orderBy=optionsTotalVolume&orderDir=desc" target="_blank">this chart for stock activity</a>
+    (order by <i>Options Vol</i> descending).
   </p>
   <p>Many thanks and blessings to:
   <ul><li><a href="https://www.reddit.com/r/wallstreetbets/" target="_blank">r/wallstreetbets</a> ❤️</li>
