--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <img src="img/brrr1.gif" alt="money printer go brr gif" style="width:100%" />
     </div>
   </div>
-  <h1>💎👐🚀🌙 Last Updated: 2021-02-02 09:15 PM </h1>
+  <h1>💎👐🚀🌙 Last Updated: 2021-02-02 09:28 PM </h1>
   <h3><i>obligatory this is not financial advice</i></h3>
   <p>Do your research. You can start with
-    <a href="https://www.barchart.com/options/most-active/stocks" target="_blank">this chart for stock activity</a>
-    (order by <i>Options Vol</i> column).
+    <a href="https://www.barchart.com/options/most-active/stocks?orderBy=optionsTotalVolume&orderDir=desc" target="_blank">this chart for stock activity</a>
+    (order by <i>Options Vol</i> descending).
   </p>
   <p>Many thanks and blessings to:
   <ul><li><a href="https://www.reddit.com/r/wallstreetbets/" target="_blank">r/wallstreetbets</a> ❤️</li>
