--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="img/brrr1.gif" alt="money printer go brr gif" style="width:100%" />
     </div>
   </div>
-  <h1>💎👐🚀🌙 Last Updated: 2021-02-03 05:13 PM </h1>
+  <h1>💎👐🚀🌙 Last Updated: 2021-02-04 10:42 AM </h1>
   <h3><i>obligatory this is not financial advice</i></h3>
   <p>Do your research. You can start with
     <a href="https://www.barchart.com/options/most-active/stocks?orderBy=optionsTotalVolume&orderDir=desc" target="_blank">this chart for stock activity</a>
